--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#4CAF50"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#4CAF50"
+secondaryBackgroundColor="#F0F2F6"
 textColor="#31333F"
 font="sans serif"
