--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,8 @@
 spreadsheet_url = "https://docs.google.com/spreadsheets/d/1_74Vt8KL0bscmSME5Evm6hn4DWytLdGDGb98tHyNwtc/edit?usp=drive_link"
 
-[gcp_service_account]
+[
+gcp_service_account
+]
 type = "service_account"
 project_id = "airy-coil-450812-k3"
 private_key_id = "6f5e9292c4374c683e5ab93d8a5d6fc2cb00fbcc"
